# ArchViz

./: .gitignore  CMakeLists.txt  CompositeObject.cpp  CompositeObject.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  DrawingArea.cpp  DrawingArea.h  Pyramid.cpp  Pyramid.h  README.md  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  main.cpp
Assets/Scripts/Core/: ArchVizEnums.cs  ArchVizManager.cs
Assets/Scripts/Data/: ArchVizSettings.cs
Assets/Scripts/Interfaces/: IArchVizModule.cs
Assets/Scripts/Systems/: HeightSystem.cs  NavigationSystem.cs  RuntimeLoader.cs
Assets/Settings/Project Configuration/: UniversalRenderPipelineGlobalSettings.asset
Assets/XR/Settings/: OpenXR Package Settings.asset
ProjectSettings/: ProjectSettings.asset
